Fix about modal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,8 @@ input[type="date"] {
 
 .lightbox figure {
   margin: 0;
+  max-height: 100%;
+  overflow: auto;
 }
 
 /* Opened lightbox */
@@ -202,8 +204,7 @@ input[type="date"] {
 /* Lightbox content */
 .lightbox figcaption {
   background: #fff;
-  max-width: 800px;
-  overflow: auto;
+  max-width: 750px;
   position: relative;
   padding: 15px;
   z-index: 10; /* position above mapbox-ctrl elements */
